Completed Menger Sponge challenge

--- a/mengerSponge/index.html
+++ b/mengerSponge/index.html
@@ -6,12 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<title>Coding Train Practice | Template</title>
+	<title>Coding Train Practice | Menger Sponge</title>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/p5.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.dom.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.1/addons/p5.sound.js"></script>
 	<script src="sketch.js"></script>
+	<script src="box.js"></script>
 
 	<style>
 		body {
@@ -27,7 +28,7 @@
 </head>
 
 <body>
-	<h1>Template</h1>
+	<h1>Menger Sponge</h1>
 </body>
 
 </html>
